# health_bok_app

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  health-content-pipeline-handoff.md  pyproject.toml
deploy/: crontab.example
deploy/systemd/: health-bok.service  health-bok.timer
docs/adr/: 0001-transcript-is-source-of-truth.md  0002-knowledge-model-claims-and-concepts.md  0003-single-self-hosted-postgres.md  0004-approval-gates-body-of-knowledge.md  (+10 more)
health_bok/: __init__.py  acquire.py  admit.py  api.py  backfill.py  concepts.py  config.py  creators.py  curation.py  db.py  dedup.py  hierarchy_backfill.py  impacts.py  job.py  llm.py  main.py  models.py  personal.py  ports.py  predicates.py  query.py  repository.py  reprocess.py  review.py  schema.sql  strength.py  summarizer.py  worker.py
tests/: conftest.py  fakes.py  seed.py  test_adjudicator_parsing.py  test_admission.py  test_auto_hierarchy.py  test_backfill.py  test_backfill_admission.py  test_backfill_details.py  test_bok_browse.py  test_chat_models.py  test_concept_merge.py  test_concept_neighbourhood.py  test_concept_normalization.py  test_concept_proposer_parsing.py  test_concept_relations.py  test_contested_pairs.py  test_creators.py  test_daily_job.py  test_dedup.py  test_edges.py  test_email_demotion.py  test_extractor_parsing.py  test_goal_automatch.py  test_hierarchy.py  test_hierarchy_backfill.py  test_hierarchy_proposer_parsing.py  test_impacts.py  test_logs.py  test_map_reduce_summarizer.py  test_personal_layer.py  test_predicates.py  test_process_me_playlist.py  test_query.py  test_relationship_impacts.py  test_reprocess.py  test_review.py  test_schema_bootstrap_concurrency.py  test_stance_parsing.py  test_strength.py  (+3 more)
web/: Dockerfile  next.config.js  package-lock.json  package.json
(+42 files in other folders)
